chore: add homepage field to make build work on github pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "image-analizer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://unjavascripter.github.io/react-image-recognition",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
